# surro-muscle

./: .gitignore  README.md  collect_results.sh  memory_measure.sh  run_muscle_server.sh  run_surro_tests.sh  run_tests.sh  send_surro.sh
data/: dataMexie.csv  dataMexieNoIter.csv
models/: _model-lstm.h5  _model-new.h5  _model-new1.h5  _model-rbf.h5  _model-time_series-gru.h5  _model-time_series-lstm.h5  _model-time_series-rnn.h5  _model-time_series.h5  _model.h5  _model1.h5  mexie-lstm-new-morefeatures.h5  mexie-lstm-new.h5  mexie-lstm.h5  mexie-mlp-mae.h5  mexie-mlp-new.h5  mexie-mlp.h5  model-cnn.h5  model-gru-tcn.h5  model-lstm-tcn.h5  model-lstm.h5  model-mlp.h5  model-rnn.h5  model.h5  model.pb  pomak.h5  regr.sav  test.h5
results/: data_pred_test1.csv  data_pred_test2.csv  data_pred_test3.csv  data_pred_test4.csv  data_pred_test5.csv  data_pred_test6.csv  data_pred_test7.csv  data_pred_test8.csv  dynamic_pred_test5.csv  dynamic_pred_test6.csv  dynamic_pred_test7.csv  dynamic_pred_test8.csv  surroHuxley5.csv  surroHuxley6.csv  surroHuxley7.csv  surroHuxley8.csv
src/: ExtendedTensorboard.py  LSTMfeatures.py  TrainLSTM.py  TrainMLP.py  TrainRBF.py  adaptive.py  attentionWithContext.py  bar_plot.py  bayes_opt.py  bayes_opt_grutcn.py  boxMex.py  cnnTrain.py  convert_h5_to_pb.py  distribution.py  draw_data.py  featureSelection.py  flaskMuscle.py  (+36 more)
src/surogat-c/: CMakeLists.txt
src/surogat-c/src/: surrogate_interface.cpp  surrogate_interface.hpp
src/surro-interface/: CMakeLists.txt
src/surro-interface/src/: surrogate_interface.cpp  surrogate_interface.hpp  test
(+173 files in other folders)
